Disable Test::Synopsis - synopses aren't perl code

--- a/dist.ini
+++ b/dist.ini
@@ -5,3 +5,5 @@ copyright_holder = Randy Stauner
 copyright_year   = 2011
 
 [@Author::RWSTAUNER]
+; command line, not perl
+disable_tests = Test::Synopsis
