Appease spelling test

--- a/dist.ini
+++ b/dist.ini
@@ -7,3 +7,5 @@ copyright_year   = 2011
 [@Author::RWSTAUNER]
 ; command line, not perl
 disable_tests = Test::Synopsis
+[%PodWeaver]
+-StopWords.include = rlibperl rbinperl
