--- a/dist.ini
+++ b/dist.ini
@@ -9,3 +9,5 @@ copyright_year   = 2011
 disable_tests = Test::Synopsis
 [%PodWeaver]
 -StopWords.include = rlibperl rbinperl
+[Run::BeforeBuild]
+run = corpus%pgenerate_scripts.pl
