Update dist.ini to work with newer author bundle

--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,10 @@ copyright_year   = 2011
 
 [@Author::RWSTAUNER]
 ; command line, not perl
-disable_tests = Test::Synopsis
+-remove = Test::Synopsis
+
 [%PodWeaver]
 -StopWords.include = rlibperl rbinperl
+
 [Run::BeforeBuild]
 run = corpus%pgenerate_scripts.pl
